feat(08): filters na munheca, documentacao e filtering no list Opening
